<resources>
    <string name="app_name">Akash Industries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accessory">Accessory</string>
    <string name="title_activity_main2">Product Catagories</string>
    <string name="title_activity_display_images">Display Products</string>
    <string name="title_activity_show_image">Product Details</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="question1">How to place an order?</string>
    <string name="answer1">You can go to the Dashboard of this app and click the call or sms icon and we will be happy to assist you with placing an order with us.</string>
    <string name="answer2">Yes! Absolutely, we are more than happy to deliver any product in any quantity in your country.</string>
    <string name="question2">Do you deliver internationally?</string>
    <string name="question3">What if the product I want is not listed?</string>
    <string name="answer3">Need not worry.Feel free to send us your requirement via sms, email or call and we will be happy to accomodate your request of custom products</string>
    <string name="title_activity_delete">Delete</string>
    <string name="title_activity_services">Services</string>
    <string name="service1">Die Casting</string>
    <string name="serviceDetails1">Die casting is a versatile process for producing engineered metal parts by forcing molten metal under high pressure into reusable steel moulds. We are capable of designing complex shapes with a high degree of accuracy and repeatability.</string>
    <string name="service2">Hot chamber die casting</string>
    <string name="serviceDetails2">Hot chamber die casting can be used with zinc, magnesium. We use zamak 3 for casting. Zinc can be die cast at moderate temperatures thus providing significant energy and processing savings over other metals and engineering alloys. Akash Industries manufactures wide varieties of zinc products which are mainly used in footwear, jewellery, belt buckles, Jackets, bags and various other fashion accessories. We specialize in delivering advanced miniature zinc die casting services for manufacturing of smaller, complex parts.</string>
    <string name="service3">Die Making</string>
    <string name="serviceDetails3">Die makers are a class of machinists in the manufacturing industries who make jigs, fixtures, dies, molds, machine tools, cutting tools, gauges, and other tools used in manufacturing processes.  Die making is a subgenre of tool making that focuses on making and maintaining dies. Precision is key in die making; punches and dies must maintain proper clearance to produce parts accurately. We have a team of experienced personnel that look into various aspects of die making. They are capable to improvise on the dies when encountering difficulties in the latter stages.</string>
    <string name="service4">CNC Machine</string>
    <string name="serviceDetails4">CNC Machining is a process used in the manufacturing sector that involves the use of computers to control machine tools. Tools that can be controlled in this manner include lathes, mills, routers and grinders. Akash Industries has its own in-house CNC machining setup. Our in house machine is used only for new developments as per requirement from our customers. The CNC machines use a tailored approach to manufacture customized products as required.</string>
    <string name="service5">Plating </string>
    <string name="serviceDetails5"> <![CDATA[Zinc die castings are a unique choice for countless decorative and functional applications. Zinc is a relatively dense metal, which has a feel of “substance” and durability. Zinc also accepts a broad assortment of finishes, from chemical conversion treatments to electroplating to sprayed and baked polymers.

    <p>It is a process that uses electric current to reduce dissolved metal cations so that they form a thin coherent metal coating on an electrode. The term is also used for electrical oxidation of anions onto a solid substrate. Our plating department has the capability to match any shade and finish required. Our products are majorly indirectly exported and hence we have to maintain optimum level of lead and nickel. We strongly believe in Kaizen and try to improve the quality of our products with the latest available technologies.</p>
    ]]></string>
    <string name="service6">Capabilities</string>
    <string name="serviceDetails6">
        <![CDATA[
        <span>
             <b> Die Casting </b>
                <ul>
                    <li>7 Machines</li>
                    <li>Ranging from -15 – 20ton</li>
                </ul>
             <b>Finishing</b>
                <ul>
                    <li>CNC Machining</li>
                    <li>Drilling, tapping, grinding</li>
                    <li>Turning, Vibro machine</li>
                </ul>
             <b>In house Process</b>
                    </ul>
                    <li>Painting</li>
                    <li>E-Coating</li>
                    <li>Powder Coating</li>
                </ul>
            </span>
            ]]>
    </string>
    <string name="title_activity_aboutus">About Us</string>
    <string name="aboutusstring">
        <![CDATA[
            <span>
                <p>
                Akash Industries was established in the year 1996. We are a strong technology based leading Die Casting Company having an excellent track record for superior quality products.
We use zamak 3 as raw material for our castings. Our products are acknowledged for excellent performance and long-term reliability. Standards make an enormous contribution to most aspects of our lives. Our primary mission is providing products with excellent quality with better technology and features at much lower costs. We have a capacity to manufacture 50,000 buckles per day.
                </p>
                <p>
                Our tooling divisions employ state-of-the art technology to design, build and verify all tooling projects. From our Uni-gaphics CAD systems to fused deposition modelling prototyping equipment to CNC electrical discharge machines to automated coordinate measuring machines to our highly skilled tooling engineers we employ the best people and products available to ensure your tooling will be world class. We strike a perfect balance between people, processes and plans.
                </p>
            </span>
            ]]>
    </string>
</resources>
