<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FAQ.FAQ"
    tools:showIn="@layout/activity_faq">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/questionLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:clickable="true"
            android:onClick="provideAnswer"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/plus1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:background="@drawable/baseline_add_white_24dp" />

                <ImageButton
                    android:id="@+id/minus1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:background="@drawable/baseline_remove_white_24dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:text="@string/question1"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="15dp"
                android:text="@string/answer1"
                android:textColor="@color/black"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:clickable="true"
            android:onClick="provideAnswer"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/plus2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/baseline_add_white_24dp" />

                <ImageButton
                    android:id="@+id/minus2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/baseline_remove_white_24dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:text="@string/question2"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="15dp"
                android:text="@string/answer2"
                android:textColor="@color/black"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:clickable="true"
            android:onClick="provideAnswer"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/plus3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/baseline_add_white_24dp" />

                <ImageButton
                    android:id="@+id/minus3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/baseline_remove_white_24dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/yellow"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:text="@string/question3"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="15dp"
                android:text="@string/answer3"
                android:textColor="@color/black"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>